crates/rimz/src/cli/sidebar/snapshots/rimz__cli__sidebar__tests__focus_fixture_frame.snap
---
source: crates/rimz/src/cli/sidebar/tests.rs
expression: rendered
---
  huddle                            /srv/code/huddle

  88                           76M  53M  15M 󱥸 7M
  10 (2)  1                                 $268.00
 ────────────────────────────────────────────────────
  1    1    1    2                ⢿ 3   󰤄 0    2
 ↑ 2 need you

▎ feature/auth-router ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇡2  +1520 -470🮇
▌ planner · Opus 4.8 · xhigh · 1m             $14.72▐
▌  plan router cutover                               ▐
▌  󰕰 ━━━━━━━━━━━╺━╺────────────────────────────   18%▐
▌  󰿦 183k · 󱥸 157k  18k  7k  22k             󰪠 22m▐
▌   subagents (5)                              $1.05▐
▌     Explore · summarize docs drift     󰪞 <1m $0.18▐
▌      󰿦 11k · Haiku · xhigh                         ▐
▌     Explore · exercise auth edge cases 󰪞 <1m $0.27▐
▌      󰿦 18k · Haiku · xhigh                         ▐
▌     Explore · trace handler graph      󰪞 <1m $0.34▐
▌      󰿦 20k · Haiku · xhigh                         ▐
▌     Plan · split blocking checks       󰪞 <1m $0.12▐

 ─── Claude ──── Codex ──── Pi ──── Open Code ───────

           Claude Max · v2.1.158                 ⇅ rc
  ▐▛███▜▌   25   38M  26M  7M 󱥸 3M        $506.00
 ▝▜█████▛▘ 5h  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱ 󰑐  2h00m
   ▘▘ ▝▝   7d  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 󰑐  2d00h

  ── Total: ─────────────────────────────────────────
  W:  246   213.4M  149.4M   42.7M 󱥸 2  $3,150.00
  M:  986   853.4M  597.4M  170.7M 󱥸 8 $12,600.00

  remote 48ms                             ? for help
