crates/rimz/src/cli/sidebar/snapshots/rimz__cli__sidebar__tests__provider_fixture_frame.snap
---
source: crates/rimz/src/cli/sidebar/tests.rs
expression: rendered
---
 ⌘ query-engine                /srv/code/query-engine

 ◎ 5                        ◇ 481k ↘ 336k ↗ 96k ◌ 48k
 ¤ 9                                           $10.08
 ────────────────────────────────────────────────────
 ? 1   ! 1   ⏸︎ 0   ✓ 0                ⢿ 1   ☾ 0   ○ 6

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇡3 ⇣1  +182 -47🮇
▌⢄ claude · Opus 4.8 · xhigh · 1m              $12.40▐
▌  port auth watcher                                 ▐
▌  ▣ ━━━━━━━━━━━━━━━━━━╺━━╺────────────────────   34%▐
▌  ▤ 341k · ◌ 293k ◍ 34k ↘ 13k ↗ 42k                 ▐
▌  ⧉ subagents (2)                              $0.46▐
▌    ⠁ Plan · run focused nextest               $0.12▐
▌      ▤ 18k · Haiku · xhigh                    ◔  3m▐
▌    ✓ Explore · audit auth watcher changes     $0.34▐
▌      ◇ 22k · Haiku · xhigh                    ◔ <1m▐
▎? codex · GPT 5.5 · xhigh · 272k               $4.36🮇
▎  approve pricing cache write                       🮇
▎  ▣ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━╺━────────────   71%🮇
▎  ▤ 193k · ◌ 185k ↘ 7k ↗ 24k                        🮇

 ─── Claude ──── Codex ──────────────────────────────

           Claude Max · v2.1.158                 ⇅ rc
  ▐▛███▜▌  ◎ 4  ◇ 498k ↘ 348k ↗ 99k ◌ 49k       $6.84
 ▝▜█████▛▘ 5h  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱ ↻  2h00m
   ▘▘ ▝▝   7d  ▰▰▰▰▰▰▰▰▰▰▰▰╱▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱ ↻  2d00h

  ── Total: ─────────────────────────────────────────
  W: ◎ 22  ◇ 2.0M ↘ 1.4M ↗ 398.7k ◌ 199.4k     $26.38
  M: ◎ 90  ◇ 8.0M ↘ 5.6M ↗   1.6M ◌ 797.4k    $105.50

                                           ? for help
