crates/rimz/src/cli/sidebar/snapshots/rimz__cli__sidebar__tests__reach_fixture_frame.snap
---
source: crates/rimz/src/cli/sidebar/tests.rs
expression: rendered
---
 ⌘ farlink                          /srv/code/farlink

 ◎ 64                           ◇ 41M ↘ 28M ↗ 8M ◌ 4M
 ¤ 12 (5) ⑃ 1                                 $204.00
 ────────────────────────────────────────────────────
 ? 2   ! 0   ⏸︎ 1   ✓ 2                ⢿ 5   ☾ 0   ○ 2
 ↑ 2 need you

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇡1  +720 -160🮇
▌⢄ claude · Opus 4.8 · xhigh · 1m              $13.56▐
▌  verify remote attach                              ▐
▌  ▣ ━━━━━━━━━━━━━━━━━━╺━━╺────────────────────   33%▐
▌  ▤ 333k · ◌ 286k ◍ 33k ↘ 13k ↗ 41k · ↻ 2           ▐
▌  ⧉ subagents (2)                              $0.46▐
▌    ⠁ Plan · run focused nextest               $0.12▐
▌      ▤ 18k · Haiku · xhigh                    ◔  3m▐
▌    ✓ Explore · audit auth watcher changes     $0.34▐
▌      ◇ 22k · Haiku · xhigh                    ◔ <1m▐

 ⑂ remote-link              ⇡1 ⇣1  +1240 -380  ⑂ main
 ? codex · GPT 5.5 · xhigh · 272k               $3.71

 ─── Claude ──── Codex ──── Pi ──── Open Code ───────

           Claude Max · v2.1.158                 ⇅ rc
  ▐▛███▜▌  ◎ 22  ◇ 28M ↘ 20M ↗ 5M ◌ 2M        $438.00
 ▝▜█████▛▘ 5h  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱ ↻  2h00m
   ▘▘ ▝▝   7d  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱ ↻  2d00h

  ── Total: ─────────────────────────────────────────
  W: ◎ 235  ◇ 178.6M ↘ 125.0M ↗  35.7M ◌ 1  $2,744.00
  M: ◎ 941  ◇ 714.6M ↘ 500.2M ↗ 142.9M ◌ 7 $10,976.00

                                           ? for help
